.k8s/charts/backend/backend.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: as-test
spec:
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: zadanie-backend:1
        imagePullPolicy: Never
        ports:
          - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
