.k8s/charts/backend/backend.service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: as-test
spec:
  selector:
    app: backend-app
  type: ClusterIP
  ports:
  - port: 5216
    targetPort: 80
